@@ -19,7 +19,6 @@ package io.anserini.rerank;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.lucene.index.IndexReader;
-import org.checkerframework.checker.units.qual.K;
 import org.kohsuke.args4j.CmdLineException;
 import org.kohsuke.args4j.CmdLineParser;
 import org.kohsuke.args4j.Option;
@@ -195,14 +194,13 @@ public class GenerateRerankerRequests<K extends Comparable<K>> implements Closea
   }
 
   public IndexReader getIndexReader(String index) {
-    Path indexPath = Path.of(index);
-    if (!Files.exists(indexPath)) { // get inverted index if index doesn't exist locally
+    if (!Files.exists(Paths.get(index))) { // get inverted index if index doesn't exist locally
       IndexInfo currentIndex = IndexInfo.get(index);
-      indexPath = IndexReaderUtils.getIndex(currentIndex.invertedIndex);
+      index = IndexReaderUtils.getIndex(currentIndex.invertedIndex).toString();
     }
-    LOG.info("Generating reranker requests with raw documents from index: " + indexPath.toString());
+    LOG.info("Generating reranker requests with raw documents from index: " + index);
     try {
-      return IndexReaderUtils.getReader(indexPath);
+      return IndexReaderUtils.getReader(index);
     } catch (IOException e) {
       throw new IllegalArgumentException(String.format("\"%s\" does not appear to have a valid inverted index.", index));
     }
